# huggingface-tools

./: MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
huggingface_tools/: __init__.py  __main__.py  cli.py  datasets.py  logging_config.py  models.py  s3_sync.py  security.py
scripts/: .env.example  datasets.json
